<resources>
    <string name="app_name">Media Library</string>
    <string name="save_media">Сохранить</string>
    <string name="save_success">Успешно сохранено</string>
    <string name="searcg_fragment_lable">Поиск медиа</string>
    <string name="add_media_fragment_label">Добавть медиа</string>
    <string name="media_list_fragment_label">Каталог</string>
    <string name="tablayout_speakable">idk lul</string>
    <string name="pager_episode_tab">Эпизоды</string>
    <string name="pager_details_tab">Общая информация</string>
    <string name="pager_staff_tab">Состав</string>
    <string name="director_s">Режиссер:</string>
    <string name="writer">Сценарист:</string>
    <string name="actor">Актеры</string>
    <string name="voice_actor">Актеры озвучки</string>
    <string name="producer">Продюсер</string>
    <string name="editor">Монтаж</string>
    <string name="operator">Оператор</string>
    <string name="design">Дизайн</string>
    <string name="composer">Композитор</string>
    <string name="description_full">Описание</string>
    <string name="release_year">Год производства:</string>
    <string name="genres">Жанр:</string>
    <string name="countries">Страна:</string>
    <string name="duration">Время:</string>
    <string name="seasonNum">Сезон %s</string>
    <string name="episodeNum">Эпизод %s</string>
    <string name="synopsis">Синопсис: </string>
    <string name="missing_name">Имя не доступно</string>
    <string name="missing_info">Отсутствует</string>
    <string name="missing_synopsis">Нет краткого описания</string>
    <string name="web_details">Посмотреть на сайте</string>
    <string name="delete">Удалить</string>
    <string name="search_action">Поиск</string>
</resources>