<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaListFragment">

    <fragment
        android:id="@+id/mediaListFragment"
        android:name="ru.mirea.medlib.view.MediaListFragment"
        android:label="@string/media_list_fragment_label"
        tools:layout="@layout/media_library_fragment">
        <action
            android:id="@+id/action_mediaListFragment_to_searchfragment"
            app:destination="@id/searchfragment" />
        <action
            android:id="@+id/action_mediaListFragment_to_pagerParentFragment"
            app:destination="@id/pagerParentFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchfragment"
        android:name="ru.mirea.medlib.view.SearchFragment"
        android:label="@string/searcg_fragment_lable"
        tools:layout="@layout/search_media_fragment">
        <action
            android:id="@+id/action_searchfragment_to_addMediaFragment"
            app:destination="@id/addMediaFragment"

            app:popUpTo="@id/mediaListFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/addMediaFragment"
        android:name="ru.mirea.medlib.view.AddMediaFragment"
        android:label="@string/add_media_fragment_label"
        tools:layout="@layout/add_media_fragment" />
    <fragment
        android:id="@+id/pagerParentFragment"
        android:name="ru.mirea.medlib.view.PagerParentFragment"
        tools:layout="@layout/media_pager_fragment"
        android:label="@string/app_name" />
</navigation>